--- a/Regex_Assignment.ipynb
+++ b/Regex_Assignment.ipynb
@@ -6,7 +6,7 @@
       "name": "Regex Assignment.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkW7DAMrcxqbB6IEBrvUwP",
+      "authorship_tag": "ABX9TyPp2mLHqZRjbGbPotUA05LY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RN4UvaTJt6AN",
-        "outputId": "7dba6f49-df59-48f8-a6c5-ced85e4ef1a8"
+        "outputId": "65798cd4-dfda-464e-9804-1be706c6f4ec"
       },
       "outputs": [
         {
@@ -71,9 +71,7 @@
             "\n",
             "05/25/1999\t09/13/22   12/05/2016\n",
             "\n",
-            "Four letter words starting with vowel - Amen Oman East Oven Uper \n",
-            "\n",
-            "\n"
+            "Four letter words starting with vowel - 'Amen', 'Oman', 'East', 'Oven', 'Uper'\n"
           ]
         }
       ],
@@ -81,6 +79,7 @@
         "fname = input('Enter the filename to Parse : ')\n",
         "f = open(fname, \"r\")\n",
         "text = f.read()\n",
+        "\n",
         "print(text)"
       ]
     },
@@ -92,7 +91,7 @@
       "metadata": {
         "id": "STeMCkPfBMVU"
       },
-      "execution_count": 33,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -114,7 +113,7 @@
       "metadata": {
         "id": "LWFEsR9OvrEM"
       },
-      "execution_count": 34,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -128,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z7QZvAGnBKno",
-        "outputId": "634445f2-df0b-4b4e-d2f6-e0bad5132227"
+        "outputId": "81923c87-bf6b-4ef4-d90d-3c672024574a"
       },
-      "execution_count": 35,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +183,7 @@
       "metadata": {
         "id": "1kWyL2lLBoin"
       },
-      "execution_count": 36,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -208,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fZ374-pzGwmE",
-        "outputId": "8d316b3d-40b2-43da-f060-e08be2ad38a8"
+        "outputId": "b4c9c700-9cac-4b52-ced8-63ca63f17cd1"
       },
-      "execution_count": 37,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,9 +242,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULkkoZ5uGzi7",
-        "outputId": "32d3a363-a8f2-4d4a-f2cd-26ba88e004d6"
+        "outputId": "dc9a5f99-495e-4899-bd84-37872af31351"
       },
-      "execution_count": 38,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PzTzVicPtZod",
-        "outputId": "179242d0-b4db-41e8-f70d-be42151ada8b"
+        "outputId": "6edbbc77-29da-4592-c837-c9e6452b487a"
       },
-      "execution_count": 39,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "phJoK6kg0vfU",
-        "outputId": "3b9d61f8-e919-42d4-885b-6ece2e2803ff"
+        "outputId": "87fe0984-69cd-491c-b72d-0e9c106ea303"
       },
-      "execution_count": 40,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +340,7 @@
       "source": [
         " # Function to fetch the Orders starting with a digit followed by th,st,nd,rd\n",
         " # e.g 1st, 2nd, 3rd, 4th\n",
-        "def order_number(data):\n",
+        "def numorder(data):\n",
         "  \n",
         "  out = re.findall(r'\\b(([1-9]+)(st|nd|rd|th))\\b|\\b((first|second|third)|(four[a-z]*|fif[a-z]*|six[a-z]*|seven[a-z]*|eigth[a-z]*|nine[a-z]*|ten[a-z]*|eleven[a-z]*|twelve[a-z]*|twenty[a-z]*|thirty[a-z]*|hundred[a-z]*|thousand[a-z]*)(st|nd|rd|th))\\b',data)\n",
         "  return out\n",
@@ -350,13 +349,13 @@
       "metadata": {
         "id": "ZE50gIOR08fp"
       },
-      "execution_count": 41,
+      "execution_count": 101,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "x = order_number(text)\n",
+        "x = numorder(text)\n",
         "for val in x:\n",
         "    print(val[0])"
       ],
@@ -365,9 +364,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "07bnApM91ErP",
-        "outputId": "8450749d-fddf-4a66-afe9-5db8e9b6e058"
+        "outputId": "686b898a-663c-4908-d32c-8b08d3b49225"
       },
-      "execution_count": 42,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +386,7 @@
       "source": [
         "#function to fetch the orderS(ordinals) in alphabetical order \n",
         "  #e.g. first, second, third etc\n",
-        "def order_text(data):\n",
+        "def txtorder(data):\n",
         "  \n",
         "  # most of the ordinals starts with alphabets and ends with th, st, rd, nd\n",
         "  out = re.findall(r'\\b((first|second|third)|(four[a-z]*|fif[a-z]*|six[a-z]*|seven[a-z]*|eigth[a-z]*|nine[a-z]*|ten[a-z]*|eleven[a-z]*|twelve[a-z]*|twenty[a-z]*|thirty[a-z]*|hundred[a-z]*|thousand[a-z]*)(st|nd|rd|th))\\b', data, re.IGNORECASE)\n",
@@ -397,13 +396,13 @@
       "metadata": {
         "id": "DPPS552k1Fn6"
       },
-      "execution_count": 42,
+      "execution_count": 103,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "x = order_number(text)\n",
+        "x = txtorder(text)\n",
         "for val in x:\n",
         "  print(val[0])"
       ],
@@ -412,19 +411,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IqjmDDjk1JQP",
-        "outputId": "0beb4742-9636-42a5-d291-0676a1088fc4"
+        "outputId": "ed8ff7ad-4244-45d5-f92a-12e618accfc4"
       },
-      "execution_count": 43,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8th\n",
-            "\n",
-            "3rd\n",
-            "4th\n",
-            "5th\n"
+            "first\n",
+            "Second\n",
+            "Sixth\n",
+            "Seventh\n"
           ]
         }
       ]
@@ -449,7 +447,7 @@
       "metadata": {
         "id": "fhxqrTM31K_H"
       },
-      "execution_count": 44,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -463,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzRpGvoN1X-_",
-        "outputId": "6f00f75a-32b5-4c62-a274-d1b4dfa05edb"
+        "outputId": "034ed81f-38fb-4997-fb24-132d3c2a531a"
       },
-      "execution_count": 45,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,17 +473,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "P6JGC_LH1aH_"
-      },
-      "execution_count": 45,
-      "outputs": []
     }
   ]
 }
