--- a/Regex_Assignment.ipynb
+++ b/Regex_Assignment.ipynb
@@ -6,7 +6,7 @@
       "name": "Regex Assignment.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPp2mLHqZRjbGbPotUA05LY",
+      "authorship_tag": "ABX9TyPnwDNmqITfkkPwubUkWTFO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RN4UvaTJt6AN",
-        "outputId": "65798cd4-dfda-464e-9804-1be706c6f4ec"
+        "outputId": "aa7858ea-5d0e-4c1f-b4d2-4756b12dc4a3"
       },
       "outputs": [
         {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "STeMCkPfBMVU"
       },
-      "execution_count": 93,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "LWFEsR9OvrEM"
       },
-      "execution_count": 94,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -127,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z7QZvAGnBKno",
-        "outputId": "81923c87-bf6b-4ef4-d90d-3c672024574a"
+        "outputId": "a9750a89-2d3e-4cb5-f8cb-3e20f9289f00"
       },
-      "execution_count": 95,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "1kWyL2lLBoin"
       },
-      "execution_count": 96,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fZ374-pzGwmE",
-        "outputId": "b4c9c700-9cac-4b52-ced8-63ca63f17cd1"
+        "outputId": "9cefb699-1c17-45f7-e595-7914c463e644"
       },
-      "execution_count": 97,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,9 +242,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULkkoZ5uGzi7",
-        "outputId": "dc9a5f99-495e-4899-bd84-37872af31351"
+        "outputId": "19d75e95-fedd-4baf-b0ee-ef883a9f1f02"
       },
-      "execution_count": 98,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PzTzVicPtZod",
-        "outputId": "6edbbc77-29da-4592-c837-c9e6452b487a"
+        "outputId": "a0866440-e769-4206-cc79-2cc85557886b"
       },
-      "execution_count": 99,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "phJoK6kg0vfU",
-        "outputId": "87fe0984-69cd-491c-b72d-0e9c106ea303"
+        "outputId": "cf0aab30-62d8-4daa-867b-cc1e91a33fe0"
       },
-      "execution_count": 100,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,14 +342,14 @@
         " # e.g 1st, 2nd, 3rd, 4th\n",
         "def numorder(data):\n",
         "  \n",
-        "  out = re.findall(r'\\b(([1-9]+)(st|nd|rd|th))\\b|\\b((first|second|third)|(four[a-z]*|fif[a-z]*|six[a-z]*|seven[a-z]*|eigth[a-z]*|nine[a-z]*|ten[a-z]*|eleven[a-z]*|twelve[a-z]*|twenty[a-z]*|thirty[a-z]*|hundred[a-z]*|thousand[a-z]*)(st|nd|rd|th))\\b',data)\n",
+        "  out = re.findall(r'\\b(([1-9][0-9]*)(st|nd|rd|th))\\b',data)\n",
         "  return out\n",
         "\n"
       ],
       "metadata": {
         "id": "ZE50gIOR08fp"
       },
-      "execution_count": 101,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -364,16 +364,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "07bnApM91ErP",
-        "outputId": "686b898a-663c-4908-d32c-8b08d3b49225"
+        "outputId": "343d2115-c323-4184-c55d-10d40eed1e02"
       },
-      "execution_count": 102,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "8th\n",
-            "\n",
             "3rd\n",
             "4th\n",
             "5th\n"
@@ -389,14 +388,14 @@
         "def txtorder(data):\n",
         "  \n",
         "  # most of the ordinals starts with alphabets and ends with th, st, rd, nd\n",
-        "  out = re.findall(r'\\b((first|second|third)|(four[a-z]*|fif[a-z]*|six[a-z]*|seven[a-z]*|eigth[a-z]*|nine[a-z]*|ten[a-z]*|eleven[a-z]*|twelve[a-z]*|twenty[a-z]*|thirty[a-z]*|hundred[a-z]*|thousand[a-z]*)(st|nd|rd|th))\\b', data, re.IGNORECASE)\n",
+        "  out = re.findall(r'\\b((first|second|third)|(four[a-z]*|fif[a-z]*|six[a-z]*|seven[a-z]*|eight[a-z]*|nin[a-z]*|ten[a-z]*|eleven[a-z]*|twel[a-z]*|thirteen[a-z]*|twenty[a-z]*|thirty[a-z]*|one[a-z]*|two[a-z]*|three[a-z]*)(st|nd|rd|th))\\b', data, re.IGNORECASE)\n",
         "  # re.IGNORECASE is used case insensitive pattern matching\n",
         "  return out"
       ],
       "metadata": {
         "id": "DPPS552k1Fn6"
       },
-      "execution_count": 103,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -411,9 +410,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IqjmDDjk1JQP",
-        "outputId": "ed8ff7ad-4244-45d5-f92a-12e618accfc4"
+        "outputId": "15832392-5978-4ff8-d12e-1ba2919e81ad"
       },
-      "execution_count": 104,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +446,7 @@
       "metadata": {
         "id": "fhxqrTM31K_H"
       },
-      "execution_count": 105,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -461,9 +460,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzRpGvoN1X-_",
-        "outputId": "034ed81f-38fb-4997-fb24-132d3c2a531a"
+        "outputId": "273e0945-1f5b-4010-fe8e-6489ccc028d2"
       },
-      "execution_count": 106,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
